// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`a mermaid reply > renders the diagram at 40 columns 1`] = `
[
  "The fold keeps a session small.",
  "",
  "\`\`\`mermaid",
  "  flowchart TB",
  "    A["read the event log"] --> B["fold",
  "settled entries"]",
  "    B --> C{"cursor moved?"}",
  "    C -->|"yes"| D["rebuild the rows"]",
  "    C -->|"no"| E["reuse the cache"]",
  "\`\`\`",
  "",
  "Settled rows are cached.",
]
`;

exports[`a mermaid reply > renders the diagram at 80 columns 1`] = `
[
  "The fold keeps a session small.",
  "",
  "          ┌────────────────────┐",
  "          │ read the event log │",
  "          └──────────┬─────────┘",
  "                     │",
  "                     ▼",
  "         ┌──────────────────────┐",
  "         │ fold settled entries │",
  "         └───────────┬──────────┘",
  "                     │",
  "                     ▼",
  "             ╔═══════════════╗",
  "             ║ cursor moved? ║",
  "             ╚═══════╤═══════╝",
  "          ┌──────────┴───────────┐",
  "          ▼yes                   ▼no",
  "┌──────────────────┐    ┌─────────────────┐",
  "│ rebuild the rows │    │ reuse the cache │",
  "└──────────────────┘    └─────────────────┘",
  "",
  "Settled rows are cached.",
]
`;

exports[`a mermaid reply > renders the diagram with its escapes 1`] = `
[
  "The fold keeps a session small.",
  "",
  "[38;2;95;175;215m          [38;2;138;138;138m┌────────────────────┐[0m[0m",
  "[38;2;95;175;215m          [38;2;138;138;138m│[0m read the event log [38;2;138;138;138m│[0m[0m",
  "[38;2;95;175;215m          [38;2;138;138;138m└──────────┬─────────┘[0m[0m",
  "[38;2;95;175;215m                     [38;2;95;175;215m│[0m[0m",
  "[38;2;95;175;215m                     [38;2;95;175;215m▼[0m[0m",
  "[38;2;95;175;215m         [38;2;138;138;138m┌──────────────────────┐[0m[0m",
  "[38;2;95;175;215m         [38;2;138;138;138m│[0m fold settled entries [38;2;138;138;138m│[0m[0m",
  "[38;2;95;175;215m         [38;2;138;138;138m└───────────┬──────────┘[0m[0m",
  "[38;2;95;175;215m                     [38;2;95;175;215m│[0m[0m",
  "[38;2;95;175;215m                     [38;2;95;175;215m▼[0m[0m",
  "[38;2;95;175;215m             [38;2;138;138;138m╔═══════════════╗[0m[0m",
  "[38;2;95;175;215m             [38;2;138;138;138m║[0m cursor moved? [38;2;138;138;138m║[0m[0m",
  "[38;2;95;175;215m             [38;2;138;138;138m╚═══════╤═══════╝[0m[0m",
  "[38;2;95;175;215m          [38;2;95;175;215m┌──────────┴───────────┐[0m[0m",
  "[38;2;95;175;215m          [38;2;95;175;215m▼[0m[38;2;138;138;138myes[0m                   [38;2;95;175;215m▼[0m[38;2;138;138;138mno[0m[0m",
  "[38;2;95;175;215m[38;2;138;138;138m┌──────────────────┐[0m    [38;2;138;138;138m┌─────────────────┐[0m[0m",
  "[38;2;95;175;215m[38;2;138;138;138m│[0m rebuild the rows [38;2;138;138;138m│[0m    [38;2;138;138;138m│[0m reuse the cache [38;2;138;138;138m│[0m[0m",
  "[38;2;95;175;215m[38;2;138;138;138m└──────────────────┘[0m    [38;2;138;138;138m└─────────────────┘[0m[0m",
  "",
  "Settled rows are cached.",
]
`;

exports[`golden frames > renders a busy dock at 40 columns 1`] = `
[
  "◎ goal round 6/256 · complete the plan …",
  "⏸ plan mode · answer the plan before ed…",
  "⚇ subagents · 1 running",
  "  ▸ c000cfa3 · spawn · running 4s",
  "⛭ jobs · 1 running",
  "  ▸ bash-1 · running 12s — sleep 45 && …",
  "☰ todos · 1 left",
  "  ▸ verify the dock",
]
`;

exports[`golden frames > renders a busy dock at 80 columns 1`] = `
[
  "◎ goal round 6/256 · complete the plan for this dsh-tui plugin",
  "⏸ plan mode · answer the plan before edits happen",
  "⚇ subagents · 1 running",
  "  ▸ c000cfa3 · spawn · running 4s",
  "⛭ jobs · 1 running",
  "  ▸ bash-1 · running 12s — sleep 45 && echo bg-done",
  "☰ todos · 1 left",
  "  ▸ verify the dock",
]
`;

exports[`golden frames > renders the dock at 40 columns 1`] = `
[
  "⏸ plan mode · answer the plan before ed…",
  "☰ todos · 2 left",
  "  ▸ verify the dock",
  "  ☐ document the dock",
]
`;

exports[`golden frames > renders the dock at 80 columns 1`] = `
[
  "⏸ plan mode · answer the plan before edits happen",
  "☰ todos · 2 left",
  "  ▸ verify the dock",
  "  ☐ document the dock",
]
`;

exports[`golden frames > renders the queued prompts at 40 columns 1`] = `
[
  "╭──────────────────────────────────────╮",
  "│ also mention the queue in the        │",
  "│ summary                              │",
  "╰──────────────────────────────────────╯",
  "╭──────────────────────────────────────╮",
  "│ and keep the README sentence short,  │",
  "│ with the same shape the bar above    │",
  "│ the editor draws                     │",
  "╰──────────────────────────────────────╯",
]
`;

exports[`golden frames > renders the queued prompts at 80 columns 1`] = `
[
  "╭──────────────────────────────────────────────────────────────────────────────╮",
  "│ also mention the queue in the summary                                        │",
  "╰──────────────────────────────────────────────────────────────────────────────╯",
  "╭──────────────────────────────────────────────────────────────────────────────╮",
  "│ and keep the README sentence short, with the same shape the bar above the    │",
  "│ editor draws                                                                 │",
  "╰──────────────────────────────────────────────────────────────────────────────╯",
]
`;

exports[`golden frames > renders the session picker at 40 columns 1`] = `
{
  "above": 0,
  "below": 0,
  "filter": "",
  "hint": "↑↓ move · enter open · esc cancel · type to filter",
  "note": undefined,
  "rows": [
    {
      "current": true,
      "description": "/Users/dev/source/opensource/deepseek-harness/master · 4m ago · 22 events",
      "label": "dock polish",
    },
    {
      "current": false,
      "description": "/Users/dev/source/opensource/deepseek-harness/master · 15m ago · 41 events",
      "label": "tui-session-f38b6841-9229-4c2f-8c82-0ced1eee68ea",
    },
  ],
  "title": "resume a session · 2 stored",
}
`;

exports[`golden frames > renders the session picker at 80 columns 1`] = `
{
  "above": 0,
  "below": 0,
  "filter": "",
  "hint": "↑↓ move · enter open · esc cancel · type to filter",
  "note": undefined,
  "rows": [
    {
      "current": true,
      "description": "/Users/dev/source/opensource/deepseek-harness/master · 4m ago · 22 events",
      "label": "dock polish",
    },
    {
      "current": false,
      "description": "/Users/dev/source/opensource/deepseek-harness/master · 15m ago · 41 events",
      "label": "tui-session-f38b6841-9229-4c2f-8c82-0ced1eee68ea",
    },
  ],
  "title": "resume a session · 2 stored",
}
`;

exports[`golden frames > renders the status row at 40 columns 1`] = `
[
  "● ready · standard · zai-coding-cn/glm-…",
]
`;

exports[`golden frames > renders the status row at 80 columns 1`] = `
[
  "● ready · standard · zai-coding-cn/glm-5.3 (max) · workspace-write · ctx 17.5k/…",
]
`;

exports[`golden frames > renders the transcript at 40 columns 1`] = `
[
  "╭──────────────────────────────────────╮",
  "│ add a dock above the editor          │",
  "╰──────────────────────────────────────╯",
  "injected dsh-agent-instructions · 3",
  "lines — <system-reminder>",
  "reasoning · 14 tokens (shift+tab)",
  "Done.",
  "",
  "- fold the work state",
  "- render it only when it says something",
  "",
  "\`\`\`ts",
  "  const dock = new WorkDock(state,",
  "theme)",
  "\`\`\`",
  "bash",
  "    pnpm test",
  "    Tests  154 passed (154)",
  "    exit 0",
  "read src/ui/view.ts  L1–3 · 3 lines · 23",
  "tok",
  "compacted 3 events (≈4200 tokens)",
]
`;

exports[`golden frames > renders the transcript at 80 columns 1`] = `
[
  "╭──────────────────────────────────────────────────────────────────────────────╮",
  "│ add a dock above the editor                                                  │",
  "╰──────────────────────────────────────────────────────────────────────────────╯",
  "injected dsh-agent-instructions · 3 lines — <system-reminder>",
  "reasoning · 14 tokens (shift+tab)",
  "Done.",
  "",
  "- fold the work state",
  "- render it only when it says something",
  "",
  "\`\`\`ts",
  "  const dock = new WorkDock(state, theme)",
  "\`\`\`",
  "bash",
  "    pnpm test",
  "    Tests  154 passed (154)",
  "    exit 0",
  "read src/ui/view.ts  L1–3 · 3 lines · 23 tok",
  "compacted 3 events (≈4200 tokens)",
]
`;

exports[`styled golden frames > renders the busy dock with its escapes 1`] = `
[
  "[1m◎ goal round 6/256 · complete the plan for this dsh-tui plugin[0m",
  "[1m⏸ plan mode · answer the plan before edits happen[0m",
  "[1m⚇ subagents · 1 running[0m",
  "[38;2;138;138;138m  ▸ c000cfa3 · spawn · running 4s[0m",
  "[1m⛭ jobs · 1 running[0m",
  "[38;2;138;138;138m  ▸ bash-1 · running 12s — sleep 45 && echo bg-done[0m",
  "[1m☰ todos · 1 left[0m",
  "[38;2;138;138;138m  ▸ verify the dock[0m",
]
`;

exports[`styled golden frames > renders the queued prompts with their escapes 1`] = `
[
  "[38;2;138;138;138m╭──────────────────────────────────────────────────────────────────────────────╮[0m",
  "[38;2;138;138;138m│[0m [2;3malso mention the queue in the summary[0m                                        [38;2;138;138;138m│[0m",
  "[38;2;138;138;138m╰──────────────────────────────────────────────────────────────────────────────╯[0m",
  "[38;2;138;138;138m╭──────────────────────────────────────────────────────────────────────────────╮[0m",
  "[38;2;138;138;138m│[0m [2;3mand keep the README sentence short, with the same shape the bar above the[0m    [38;2;138;138;138m│[0m",
  "[38;2;138;138;138m│[0m [2;3meditor draws[0m                                                                 [38;2;138;138;138m│[0m",
  "[38;2;138;138;138m╰──────────────────────────────────────────────────────────────────────────────╯[0m",
]
`;

exports[`styled golden frames > renders the status row with its escapes 1`] = `
[
  "[38;2;138;138;138m● ready[0m[38;2;138;138;138m · [0m[38;2;138;138;138mstandard[0m[38;2;138;138;138m · [0m[38;2;138;138;138mzai-coding-cn/glm-5.3[0m[38;2;138;138;138m (max)[0m[38;2;138;138;138m · [0m[38;2;138;138;138mworkspace-write[0m[38;2;138;138;138m · [0m[38;2;138;138;138mctx 17.5k/[0m…[0m[0m",
]
`;

exports[`styled golden frames > renders the transcript with its escapes 1`] = `
[
  "[38;2;138;138;138m╭──────────────────────────────────────────────────────────────────────────────╮[0m",
  "[38;2;138;138;138m│[0m [38;2;252;202;240madd a dock above the editor[0m                                                  [38;2;138;138;138m│[0m",
  "[38;2;138;138;138m╰──────────────────────────────────────────────────────────────────────────────╯[0m",
  "[38;2;138;138;138minjected dsh-agent-instructions · 3 lines — <system-reminder>[0m",
  "[38;2;138;138;138mreasoning · 14 tokens[0m[38;2;138;138;138m (shift+tab)[0m",
  "Done.",
  "",
  "[38;2;95;175;215m- [0mfold the work state",
  "[38;2;95;175;215m- [0mrender it only when it says something",
  "",
  "[38;2;138;138;138m\`\`\`ts[0m",
  "  const dock = new WorkDock(state, theme)",
  "[38;2;138;138;138m\`\`\`[0m",
  "[38;2;215;175;95mbash[0m",
  "    [38;2;141;179;217mpnpm test[0m",
  "    [38;2;138;138;138mTests  154 passed (154)[0m",
  "    [38;2;138;138;138mexit 0[0m",
  "[38;2;215;175;95mread[0m [38;2;141;179;217msrc/ui/view.ts[0m  [38;2;138;138;138mL1–3[0m[38;2;138;138;138m · [0m[38;2;138;138;138m3 lines[0m[38;2;138;138;138m · [0m[38;2;138;138;138m23 tok[0m",
  "[38;2;138;138;138mcompacted 3 events (≈4200 tokens)[0m",
]
`;
